# rockbox_db_py

./: README.md  pyproject.toml
.github/workflows/: main.yml  make_executable.yml
gui/: README.md  main.py
gui/src/: config.py  db_helpers.py  file.py  file_helpers.py  logic.py  progress.py  treeview.py  utils.py  workers.py
rockbox_db_py/classes/: index_file.py  index_file_entry.py  tag_file.py  tag_file_entry.py
rockbox_db_py/tools/: print_db.py
rockbox_db_py/utils/: struct_helpers.py
src/rockbox_db_py/classes/: db_file_type.py  index_file.py  index_file_entry.py  music_file.py  tag_file.py  tag_file_entry.py
src/rockbox_db_py/utils/: defs.py  helpers.py  struct_helpers.py  utils.py
src/utils/: defs.py
tools/: build_db.py  canonicalize.py  copy_db.py  debug_db_links.py  edit_db.py  print_db.py  write_db.py
